buildscript {
    repositories {jcenter() }
}

plugins {
    id 'java'
}

group 'io.vantiq'
version 'unspecified'

sourceCompatibility = 1.8

ext {
    // Open the Git repository in the current directory and get commit id of HEAD.
//    git = org.ajoberstar.grgit.Grgit.open(file('.'))
//    revision = git.head().id

    vertxVersion = '3.5.1'
    jacksonVersion = '2.9.3'
    hazelcastVersion = '3.8.2'
    metricsVersion = '4.0.2'
    rxjavaVersion = '2.1.11'
    slf4jApiVersion = '1.7.25'
    okhttpVersion = '3.4.1'
}

// Copies the README and licenses into the jar
jar.from(".") {
    include "README.md"
    include "LICENSE/*"
    into ""
}

repositories {
    maven {
        url "https://dl.bintray.com/vantiq/maven"
    }
}

configurations {
    testArtifacts
}

test {
    useJUnit()
    if (System.getenv("CONNECTOR_AUTH_TOKEN") == null) {
        environment "CONNECTOR_AUTH_TOKEN", "xxxx===="
    }
}

tasks.withType(Test) {
    if (rootProject.hasProperty("TestAuthToken")) {
        systemProperty "TestAuthToken", rootProject.findProperty("TestAuthToken") ?: "empty"
    }
    if (rootProject.hasProperty("TestVantiqServer")) {
        systemProperty "TestVantiqServer", rootProject.findProperty("TestVantiqServer") ?: "empty"
    }
    // Use the build dir as a base to get our various test artifacts.
    systemProperty "buildDir", "${buildDir}"
}

task testJar (type: Jar) {
    baseName = "${project.name}-test"
    from sourceSets.test.output
}

artifacts {
    testArtifacts testJar
}

dependencies {
    compile "org.slf4j:slf4j-api:1.7.25"
    compile "org.apache.logging.log4j:log4j-slf4j-impl:2.11.0"


    compile "com.squareup.okhttp3:okhttp:${okhttpVersion}"
    compile "com.squareup.okhttp3:okhttp-ws:${okhttpVersion}"
    compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"

    testCompile group: 'junit', name: 'junit', version: '4.12'
    // Used for uploading documents (images) to VANTIQ with VANTIQ SDK
    testCompile 'io.vantiq:vantiq-sdk:1.0.24'

    // Used to create EvictingQueue for failed messages queue
    implementation 'com.google.guava:guava:23.0'
}

// Create a jar with all dependencies included
task fatJar(type: Jar) {
    appendix = 'fat'
    from sourceSets.main.output
    from(".") {
        include "README.md"
        include "LICENSE/*"
        into ""
    }
    from configurations.runtimeClasspath.
                findAll( { it.name.endsWith('jar') && !it.name.startsWith('groovy')}).
                collect( { zipTree(it) })
}